--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
-        /* header {
-            overflow: hidden;
-        } */
-
+        
         a {
             color: rgb(60, 60, 60);
         }
@@ -626,17 +623,17 @@
 
                     <div class="grid-link-1"><a href="#">Introduction</a></div>
                     <div class="grid-link-2"><a href="#">Blog</a></div>
-                    <div class="grid-link-3"><a href="#">Email: wzy66618@outlook.com</a></div>
+                    <div class="grid-link-3"><p style="color: rgb(60, 60, 60);" >Email: wzy66618@outlook.com</p></div>
                     <div class="grid-link-4"><a href="#">My goals</a></div>
                     <div class="grid-link-5"><a href="#">Community</a></div>
-                    <div class="grid-link-6"><a href="#">Ins: wangmichael327</a></div>
+                    <div class="grid-link-6"><p style="color: rgb(60, 60, 60);" >Ins: wangmichael327</p></div>
                     <div class="grid-link-7"><a href="#">My achievements</a></div>
                     <div class="grid-link-8"><a href="#">Gallery</a></div>
-                    <div class="grid-link-9"><a href="#">WeChat: q2682186632</a></div>
+                    <div class="grid-link-9"><p style="color: rgb(60, 60, 60);" >WeChat: q2682186632</p></div>
 
                 </div>
             </div>
-    </div>
+    
     </footer>
     </div>
 </body>
