--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 
             </nav>
             <nav class="navbar navbar-expand-lg  navbar-expand-sm navbar-expand-md navbar-expand-xl navbar-light bg-light"
-                style="margin-top: 90px;">
+                style="margin-top: 90px; padding-bottom: 40px;">
 
                 <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
                 <ul class="navbar-nav mr-mid ">
@@ -535,7 +535,7 @@
             </nav>
         </header>
         <content>
-            <div id="slideshow" class="carousel slide" data-ride="carousel">
+            <div id="slideshow" class="carousel slide" data-ride="carousel" >
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="https://i.picsum.photos/id/1000/5626/2635.jpg" class="d-block w-100" alt="...">
