--- a/index.html
+++ b/index.html
@@ -59,17 +59,14 @@
 
         }
 
-        .card {
-            border-bottom-left-radius: 0%;
-            border-bottom-right-radius: 0%;
-
-
-        }
-
         .row::after {
             content: "";
             clear: both;
             display: table;
+        }
+
+        .top-jumbotron {
+            z-index: 9;
         }
 
 
@@ -201,6 +198,7 @@
                 top: -20px;
                 border-radius: 0px;
                 position: relative;
+                z-index: 9;
             }
 
             .row {
@@ -535,16 +533,16 @@
             </nav>
         </header>
         <content>
-            <div id="slideshow" class="carousel slide" data-ride="carousel" >
+            <div id="slideshow" class="carousel slide carousel-fade" data-ride="carousel" >
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://i.picsum.photos/id/1000/5626/2635.jpg" class="d-block w-100" alt="...">
+                        <img src="https://i.picsum.photos/id/1000/1920/880.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://i.picsum.photos/id/1000/5626/2635.jpg" class="d-block w-100" alt="...">
+                        <img src="https://i.picsum.photos/id/840/1920/880.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="https://i.picsum.photos/id/1000/5626/2635.jpg" class="d-block w-100" alt="...">
+                        <img src="https://i.picsum.photos/id/849/1920/880.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
@@ -628,7 +626,7 @@
                     <div class="grid-link-5"><a href="#">Community</a></div>
                     <div class="grid-link-6"><p style="color: rgb(60, 60, 60);" >Ins: wangmichael327</p></div>
                     <div class="grid-link-7"><a href="#">My achievements</a></div>
-                    <div class="grid-link-8"><a href="#">Gallery</a></div>
+                    <div class="grid-link-8"><a href="gallery.html">Gallery</a></div>
                     <div class="grid-link-9"><p style="color: rgb(60, 60, 60);" >WeChat: q2682186632</p></div>
 
                 </div>
