--- a/article.html
+++ b/article.html
@@ -209,21 +209,15 @@
                         <h5>Contact</h5>
                     </div>
 
-                    <div class="footer-grid-link-1"><a href="#">Introduction</a></div>
-                    <div class="footer-grid-link-2"><a href="#">Blog</a></div>
-                    <div class="footer-grid-link-3">
-                        <p style="color: rgb(60, 60, 60);">Email: wzy66618@outlook.com</p>
-                    </div>
-                    <div class="footer-grid-link-4"><a href="#">My goals</a></div>
-                    <div class="footer-grid-link-5"><a href="#">Community</a></div>
-                    <div class="footer-grid-link-6">
-                        <p style="color: rgb(60, 60, 60);">Ins: wangmichael327</p>
-                    </div>
-                    <div class="footer-grid-link-7"><a href="#">My achievements</a></div>
-                    <div class="footer-grid-link-8"><a href="#">Gallery</a></div>
-                    <div class="footer-grid-link-9">
-                        <p style="color: rgb(60, 60, 60);">WeChat: q2682186632</p>
-                    </div>
+                    <div class="footer-grid-link-1"><a href="article.html">Introduction</a></div>
+                    <div class="footer-grid-link-2"><a href="gallery.html">Blog</a></div>
+                    <div class="footer-grid-link-3"><p style="color: rgb(60, 60, 60);" >Email: wzy66618@outlook.com</p></div>
+                    <div class="footer-grid-link-4"><a href="article.html">My goals</a></div>
+                    <div class="footer-grid-link-5"><a href="gallery.html">Community</a></div>
+                    <div class="footer-grid-link-6"><p style="color: rgb(60, 60, 60);" >Ins: wangmichael327</p></div>
+                    <div class="footer-grid-link-7"><a href="article.html">My achievements</a></div>
+                    <div class="footer-grid-link-8"><a href="gallery.html">Gallery</a></div>
+                    <div class="footer-grid-link-9"><p style="color: rgb(60, 60, 60);" >WeChat: q2682186632</p></div>
 
                 </div>
             </div>
