--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,9 @@
             .popBox {
             display: none;
             /* background-color: #FFFFFF; */
+            top: 20%;
+            font-size: 18px;
+
             z-index: 11;
             margin-left: auto;
             margin-right: auto;
@@ -42,7 +45,7 @@
             height: 80%;
 
             position: fixed;
-            top: 100px;
+            /* top: 100px; */
             right: 0;
             left: 0;
             bottom: 0;
@@ -55,13 +58,17 @@
             display: none;
             /* background-color: #FFFFFF; */
             z-index: 11;
-            padding-bottom: 300px;
+            
+            top: 26%;
+            font-size: 18px;
+            /* max-height: 400px; */
+            /* padding-bottom: 300px; */
             margin-left: auto;
             margin-right: auto;
             width: 100%;
 
             position: fixed;
-            top: 0px;
+            /* top: 0px; */
             right: 0;
             left: 0;
             bottom: 0;
@@ -523,7 +530,7 @@
                 width: 456px;
                 position: absolute;
                 left: 50%;
-                margin-left: -228px;
+                margin-left: -227px;
             }
 
             .grid-item-8 {
@@ -782,7 +789,7 @@
                         </picture>
                         <div id="popBox-228-2001" class="popBox" onclick="closeBox('228-2001')">                            
                             <div class="popBox-content">
-                                <img src="https://i.picsum.photos/id/1000/1326/590.jpg">
+                                <img src="https://i.picsum.photos/id/1000/1143/600.jpg">
                                 <h4> popBox-228-2001</h4>
                                 <p>
                                     thsfhaufoa fiso sioo 0aa0i ss aiao  of thae pic tiaera 
@@ -930,7 +937,7 @@
         </content>
 
         <footer>
-            <div class=" jumbotron" style="margin-top: 100px; margin-bottom: 0px;">
+            <div class="jumbotron" style="margin-top: 150px; margin-bottom: 0px;">
                 <div class="footer-grid-container">
                     <div class="footer-grid-brand">
                         <img src="pics\mySign.png" , alt="Zhiyu Wang">
@@ -946,21 +953,15 @@
                         <h5>Contact</h5>
                     </div>
 
-                    <div class="footer-grid-link-1"><a href="#">Introduction</a></div>
-                    <div class="footer-grid-link-2"><a href="#">Blog</a></div>
-                    <div class="footer-grid-link-3">
-                        <p style="color: rgb(60, 60, 60);">Email: wzy66618@outlook.com</p>
-                    </div>
-                    <div class="footer-grid-link-4"><a href="#">My goals</a></div>
-                    <div class="footer-grid-link-5"><a href="#">Community</a></div>
-                    <div class="footer-grid-link-6">
-                        <p style="color: rgb(60, 60, 60);">Ins: wangmichael327</p>
-                    </div>
-                    <div class="footer-grid-link-7"><a href="#">My achievements</a></div>
-                    <div class="footer-grid-link-8"><a href="#">Gallery</a></div>
-                    <div class="footer-grid-link-9">
-                        <p style="color: rgb(60, 60, 60);">WeChat: q2682186632</p>
-                    </div>
+                    <div class="footer-grid-link-1"><a href="article.html">Introduction</a></div>
+                    <div class="footer-grid-link-2"><a href="gallery.html">Blog</a></div>
+                    <div class="footer-grid-link-3"><p style="color: rgb(60, 60, 60);" >Email: wzy66618@outlook.com</p></div>
+                    <div class="footer-grid-link-4"><a href="article.html">My goals</a></div>
+                    <div class="footer-grid-link-5"><a href="gallery.html">Community</a></div>
+                    <div class="footer-grid-link-6"><p style="color: rgb(60, 60, 60);" >Ins: wangmichael327</p></div>
+                    <div class="footer-grid-link-7"><a href="article.html">My achievements</a></div>
+                    <div class="footer-grid-link-8"><a href="gallery.html">Gallery</a></div>
+                    <div class="footer-grid-link-9"><p style="color: rgb(60, 60, 60);" >WeChat: q2682186632</p></div>
 
                 </div>
             </div>
