--- a/index.html
+++ b/index.html
@@ -504,30 +504,30 @@
                 <ul class="navbar-nav mr-mid ">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="article.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             About
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Introduction</a>
+                            <a class="dropdown-item" href="article.html">Introduction</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">My goals</a>
-                            <a class="dropdown-item" href="#">My achievements</a>
+                            <a class="dropdown-item" href="article.html">My goals</a>
+                            <a class="dropdown-item" href="article.html">My achievements</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="article.html" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Discover
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Blog</a>
-                            <a class="dropdown-item" href="#">Gallery</a>
-                            <a class="dropdown-item" href="#">Community</a>
+                            <a class="dropdown-item" href="gallery.html">Blog</a>
+                            <a class="dropdown-item" href="gallery.html">Gallery</a>
+                            <a class="dropdown-item" href="article.html">Community</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="article.html">Contact</a>
                 </ul>
                 <!-- </div> -->
             </nav>
@@ -562,7 +562,7 @@
                     attention
                     to
                     featured content or information.</p>
-                <!-- <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Learn more</a> -->
+                <!-- <a class="btn btn-outline-secondary btn-lg" href="article.html" role="button">Learn more</a> -->
             </div>
 
             <div class="container" style=" padding-top: 50px;">
@@ -578,7 +578,7 @@
                             attention
                             to
                             featured content or information.</p>
-                        <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Learn more</a>
+                        <a class="btn btn-outline-secondary btn-lg" href="video.html" role="button">Learn more</a>
                     </div>
                     <div class="feature-squre-_right">
                         <p></p>
@@ -589,7 +589,7 @@
                             attention
                             to
                             featured content or information.</p>
-                        <a class="btn btn-outline-secondary btn-lg" href="#" role="button">Learn more</a>
+                        <a class="btn btn-outline-secondary btn-lg" href="article.html" role="button">Learn more</a>
                     </div>
                     <div class=" feature-img-right"><img src="https://i.picsum.photos/id/1000/900/600.jpg" />
                     </div>
@@ -619,13 +619,13 @@
                         <h5>Contact</h5>
                     </div>
 
-                    <div class="grid-link-1"><a href="#">Introduction</a></div>
-                    <div class="grid-link-2"><a href="#">Blog</a></div>
+                    <div class="grid-link-1"><a href="article.html">Introduction</a></div>
+                    <div class="grid-link-2"><a href="gallery.html">Blog</a></div>
                     <div class="grid-link-3"><p style="color: rgb(60, 60, 60);" >Email: wzy66618@outlook.com</p></div>
-                    <div class="grid-link-4"><a href="#">My goals</a></div>
-                    <div class="grid-link-5"><a href="#">Community</a></div>
+                    <div class="grid-link-4"><a href="article.html">My goals</a></div>
+                    <div class="grid-link-5"><a href="gallery.html">Community</a></div>
                     <div class="grid-link-6"><p style="color: rgb(60, 60, 60);" >Ins: wangmichael327</p></div>
-                    <div class="grid-link-7"><a href="#">My achievements</a></div>
+                    <div class="grid-link-7"><a href="article.html">My achievements</a></div>
                     <div class="grid-link-8"><a href="gallery.html">Gallery</a></div>
                     <div class="grid-link-9"><p style="color: rgb(60, 60, 60);" >WeChat: q2682186632</p></div>
 
