--- a/gallery.html
+++ b/gallery.html
@@ -107,6 +107,7 @@
 
         .popBox-content p {
             font-size: 18px;
+            margin: 17px;
         }
 
         .popBox-content h4 {
