--- a/gallery.html
+++ b/gallery.html
@@ -732,7 +732,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <h1 class="nav-title">My Gallery</h1>
-                <a class="navbar-brand" href="https://zhiyu-wang.github.io/me/">
+                <a class="navbar-brand" href="index.html">
                     <img src="pics\mySign.png" class="signature" alt="Zhiyu Wang">
                 </a>
             </nav>
