--- a/video.html
+++ b/video.html
@@ -101,7 +101,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <h1 class="nav-title">My Channel</h1>
-                <a class="navbar-brand" style="margin-left: auto;" href="https://zhiyu-wang.github.io/me/">
+                <a class="navbar-brand" style="margin-left: auto;" href="index.html">
                     <img src="pics\mySign.png" class="signature" alt="Zhiyu Wang">
                 </a>
 
