--- a/gallery.html
+++ b/gallery.html
@@ -746,7 +746,7 @@
             </div>
         </content>
 
-        <footer>
+        <footer id="footer">
             <div class="jumbotron" style="margin-top: 150px; margin-bottom: 0px;">
                 <div class="footer-grid-container">
                     <div class="footer-grid-brand">
@@ -779,9 +779,7 @@
         </footer>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -790,19 +788,23 @@
         crossorigin="anonymous"></script>
     <script>
         function popBox(id) {
-            var popBox = document.getElementById("popBox-" + id);
-            var popLayer = document.getElementById("popLayer");
-            popBox.style.display = "block";
-            popLayer.style.display = "block";
+            // var popBox = document.getElementById("popBox-" + id);
+            // var popLayer = document.getElementById("popLayer");
+            // popBox.style.display = "block";
+            // popLayer.style.display = "block";
 
+            $("#popBox-" + id).fadeIn(200)
+            $("#popLayer").fadeIn(100)
         };
 
         function closeBox(id) {
-            var popBox = document.getElementById("popBox-" + id);
-            var popLayer = document.getElementById("popLayer");
-            popBox.style.display = "none";
-            popLayer.style.display = "none";
+            // var popBox = document.getElementById("popBox-" + id);
+            // var popLayer = document.getElementById("popLayer");
+            // popBox.style.display = "none";
+            // popLayer.style.display = "none";
 
+            $("#popBox-" + id).fadeOut(100)
+            $("#popLayer").fadeOut(200)
         }
     </script>
     <script type="text/javascript" src="js\gallery.js"></script>
